[package]
name = "specta-zod"
description = "Export your Rust types to Zod schemas for TypeScript"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-zod/latest/specta-zod"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.20" }
specta-typescript = { version = "0.0.7"}
# TODO: Don't depend on serde
specta-serde = { version = "0.0.7" }
thiserror = "1.0.61"

[dev-dependencies]
specta-util = { path = "../specta-util" }
